lab9/tests/valid/validProduct2.js
module.exports = {
    "category_id": "5",
    "title": "Galaxy watches",
    "content": "samsung",
    "price": "100",
    "old_price": "50",
    "status": "1",
    "keywords": "New keywords",
    "description": "New description",
    "hit": "0"
}