lab9/tests/invalid/wrongStatus.js
module.exports = {
    "category_id": "10",
    "title": "watches",
    "content": "New content",
    "price": "100",
    "old_price": "50",
    "status": "10",
    "keywords": "New keywords",
    "description": "New description",
    "hit": "0"
}